updated for week4 assignment: medium screen need to be fixed

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,11 +20,11 @@
     </head>
     <body>
         <header>
-            <section class="headings">
+            <div class="headings">
                 <div id="site-logo">
                     <a href="index.html"><img src="./images/greenfingers.jpg" alt="Image of Green'Fingers logo"></a>
                 </div>
-                <h1 id="site-name">Green'Fingers Chamber</h1>  
+                <h1 id="site-name">Green'Fingers<br>Chamber</h1>  
                 <div class="social">
                     <a id="fb" href="https://facebook.com/"><img src="./images/facebook.png" alt="facebook logo"></a>
                     <a id="in" href="https://linkedin.com/"><img src="./images/linkedin.jpg" alt="Linkedin logo"></a>
@@ -39,40 +39,75 @@
                         <li><a href="#">Board Members</a></li>
                     </ul>
                 </nav>
-            </section>
-            <div id="date"></div>
+            </div>
+            <div class="date"></div>
         </header>
         <main>
             <div class="container">
-                <p>hero image and call to action</p>
+                Hero image and call to action
             </div>
             <div class="container1">
-                <p>news</p>
+                News release
 
             </div>
             <div class="container2">
-                <p>events</p>
+                Event
             </div>
             <div class="container3">
-                <p>weather</p>
+                Weather
             </div>
             <div class="container4">                
-                <p>join</p>
+                Join
             </div>
-            <div class="container4">                
-                <p>company spotlight</p>
+            <div class="container5">  
+                <div>Spotlight1</div>             
+                <div>Spotlight2</div>
+                <div id="spot3">Spotlight3</div>
+                
             </div>
         </main>
         <footer>
-            <p>Green'Fingers Chamber</p>
-            <p>120 I Talatamaty Ambohidratrimo - Tana 105</p>
-            <p>greenfingreschamber@chamber.org</p>
-            <p>Map</p>
-            <div id="signature">
-                &copy;<span id="year"></span>WDD230: Haingotiana N Rambikarison Chamber Project</div>
-            <div id="update">
-                Last Modified: <span id="lastModifiedDate"></span>
+            <div class="address-contact">
+                <div id="site-logo-footer">
+                    <a href="index.html"><img src="./images/greenfingers.jpg" alt="Image of Green'Fingers logo"></a>
+                </div>
+                <div class="site-name-footer">
+                    <h3>Green'Fingers Chamber</h3>
+                    <p>120 I Talatamaty Ambohidratrimo - Tana 105</p>
+                    <p>Madagascar</p>
+                </div>
+                <div id="contact">
+                    <p>greenfingreschamber@chamber.org</p>
+                    <p>tel: +(261) 34 27 389 27</p>
+                    <div class="location">
+                    <a href=" https://www.google.com/maps/@-18.8407366,47.4631854,17.03z"><img src="https://img.icons8.com/color/30/000000/worldwide-location.png"/>Location Map</a>
+                    </div>
+                </div>
             </div>
+            <div id="signature-base">
+                <div class="m">
+                    &copy;<span id="year"></span> Green'Fingers Chamber  
+                </div>
+                <p>Haingotiana N Rambikarison</p>
+                <p>WDD230 project</p>
+                <div class="update">
+                    Last Modified: <span id="lastModifiedDate"></span>
+                </div>
+            </div>
+            <div id="signature-medium">
+                <div class="m">
+                    &copy;<span id="year1"></span> Green'Fingers Chamber |  Haingotiana N Rambikarison  | WDD230 project |
+                </div>
+                <div class="update">
+                    Last Modified: <span id="lastModifiedDate1"></span>
+                </div>
+            </div> 
+            <div id="signature-large">
+                <div class="m">
+                    &copy;<span id="year2"></span> Green'Fingers Chamber  |  Haingotiana N Rambikarison  |   WDD230 project   | 
+                    Last Modified: <span id="lastModifiedDate2"></span>
+                </div> 
+            </div>   
         </footer>
         <script src="./js/date.js"></script>
         <script src="./js/main.js"></script>
