dom manipulation - book of mormon.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -88,7 +88,7 @@
                 <div class="m">
                     &copy;<span id="year"></span> Green'Fingers Chamber  
                 </div>
-                <p>Haingotiana N Rambikarison</p>
+                <p> <strong>Haingotiana N Rambikarison </strong></p>
                 <p>WDD230 project</p>
                 <div class="update">
                     Last Modified: <span id="lastModifiedDate"></span>
@@ -96,7 +96,7 @@
             </div>
             <div id="signature-medium">
                 <div class="m">
-                    &copy;<span id="year1"></span> Green'Fingers Chamber |  Haingotiana N Rambikarison  | WDD230 project |
+                    &copy;<span id="year1"></span> Green'Fingers Chamber |<strong>   Haingotiana N Rambikarison  </strong> | WDD230 project |
                 </div>
                 <div class="update">
                     Last Modified: <span id="lastModifiedDate1"></span>
@@ -104,7 +104,7 @@
             </div> 
             <div id="signature-large">
                 <div class="m">
-                    &copy;<span id="year2"></span> Green'Fingers Chamber  |  Haingotiana N Rambikarison  |   WDD230 project   | 
+                    &copy;<span id="year2"></span> Green'Fingers Chamber  |<strong>  Haingotiana N Rambikarison  </strong>|   WDD230 project   | 
                     Last Modified: <span id="lastModifiedDate2"></span>
                 </div> 
             </div>   
