--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -3,5 +3,36 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WDD230 - DOM Manippulation: Book of Mormon
-    <title>Shopping list example</title>
+    <meta name="description" content="WDD230 - DOM Manippulation: Book of Mormon">
+    <title>Book of Mormon - Top 25</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/medium.css">
+    <link rel="stylesheet" href="./css/large.css">
+
+  </head>
+  <body>
+    <header>
+      <h1>📘 Book of Mormon - Top 25</h1>
+    </header>
+    <main>
+	    <div class="input">
+		    <label>Enter Book and Chapter<br>
+			  <input type="text" id="favchap" placeholder="Alma 5" required></label>
+		    <button type="submit">Add Chapter</button>
+	    </div>
+	    <div class="listcontainer">
+		    <ul class="list">
+		    </ul>
+	    </div>
+    </main>
+    <footer>
+      <p>.:| Haingotiana N Ramnikarison |:.</p>
+    </footer>
+    <script src="./js/main.js"></script>
+    
+  </body>
+ 
