name error: fixed

--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -30,7 +30,7 @@
 	    </div>
     </main>
     <footer>
-      <p>.:| Haingotiana N Ramnikarison |:.</p>
+      <p>.:| Haingotiana N Rambikarison |:.</p>
     </footer>
     <script src="./js/main.js"></script>
     
