--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,6 +20,7 @@
     </head>
     <body>
         <header>
+            <div class="banner"></div>
             <div class="headings">
                 <div id="site-logo">
                     <a href="index.html"><img src="./images/greenfingers.jpg" alt="Image of Green'Fingers logo"></a>
