--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                             <li>Lesson 03: <a href="./lesson03/index.html">Website Planning Document</a></li>
                             <li>Lesson 04: <a href="./chamber/index.html">Chamber Home Page Building</a></li>
                             <li>Lesson 05: <a href="./lesson05/bom.html">DOM Manipulation</a></li>
-                            <li>Lesson 06: <a href="">Title</a></li>
-                            <li>Lesson 07: <a href="">Title</a></li>
+                            <li>Lesson 06: <a href="./chamber/index.html">Responsive Design</a></li>
+                            <li>Lesson 07: <a href="./chamber/discover.html"></a>The Discover Page</li>
                             <li>Lesson 08: <a href="">Title</a></li>
                             <li>Lesson 09: <a href="">Title</a></li>
                             <li>Lesson 10: <a href="">Title</a></li>
