--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <li>Lesson 04: <a href="./chamber/index.html">Chamber Home Page Building</a></li>
                             <li>Lesson 05: <a href="./lesson05/bom.html">DOM Manipulation</a></li>
                             <li>Lesson 06: <a href="./chamber/index.html">Responsive Design</a></li>
-                            <li>Lesson 07: <a href="./chamber/discover.html"></a>The Discover Page</li>
+                            <li>Lesson 07: <a href="./chamber/discover.html">The Discover Page</a></li>
                             <li>Lesson 08: <a href="">Title</a></li>
                             <li>Lesson 09: <a href="">Title</a></li>
                             <li>Lesson 10: <a href="">Title</a></li>
