path image placeholder changed

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -60,7 +60,7 @@
             </div>
             <section>
                 <div id="airport">
-                    <img src="images/placeholder.png" data-src="images/airport.jpg" al="Madagascar International Airport">
+                    <img src="images/placeholder.png" data-src="images/airport.jpg" alt="Madagascar International Airport">
                     <h3>Ravinala Airport</h3>
                     <p>The airport of Ravinala is the largest and the first international airport of Madagascar. 
                         It is located in the district of Ambohidratrimo. In addition to being the gateway to the country, 
@@ -68,14 +68,14 @@
                         It takes its name from an endemic plant that belongs only to the country.</p>
                 </div>
                 <div id="fortress">
-                    <img src="images/ivato-farm.jpg" al="The royal fortress of Ambohidratrimo">
+                    <img src="images/placeholder.png" data-src="images/fortress.jpg" al="The royal fortress of Ambohidratrimo">
                     <h3>The Fortress of Ambohidratrimo</h3>
                     <p>The Fortress of Ambohidratrimo is one of the twelve sacred hills of Antananarivo.
                         It is a sacred place, where the remains of the past are well preserved in a royal palace called Rova d'Ambohidratrimo, 
                         and where the royal tombs, topped with the traditional 'Tranomanara' in wood, tell the amazing stories of the buried royalty. </p>
                 </div>
                 <div id="farm">
-                    <img src="images/airport.jpg" al="Madagascar International Airport">
+                    <img src="images/placeholder.png" data-src="images/ivato-farm.jpg" alt="Ivato farm">
                     <h3> La ferme d’Ivato (Ivato Farm)</h3>
                     <p>La Ferme d'Ivato is located close to Ivato International Airport. 
                         Besides growing fruits and vegetables, the farm is also raising chickens, ducks and rabbits. 
@@ -83,6 +83,7 @@
                         The business is part of Le Combava, a hotel between the airport and the capital.</p>
                 </div>
                 <div id="croc">
+                    <img src="images/placeholder.png" data-src="images/crocfarm.jpg" alt="Croc farm, animals">
                     <h3>Croc Farm</h3>
                     <p>The zoological and botanical park Croc Farm can be found in a small valley following a bumpy 10-minute car ride from Ivato Airport. 
                         It is one of the most visited private parks in Madagascar. Not only can visitors observe crocodiles, 
@@ -91,11 +92,13 @@
                         Hundreds of crocodiles can be seen lazing in the sun at the shores of a lake.</p>
                 </div>
                 <div id="foodretailing">
+                    <img src="images/placeholder.png" data-src="images/lahutte.jpg" alt="La hutte canadienne food retailing and farm">
                     <h3>La Hutte Canadienne</h3>
                     <p>La Hutte Canadienne is a private company located at a 2 minutes’ drive from the international airport of Ivato. 
                      Its business is centered around food retailing, food products, farming, agriculture, and industrial equipment activities.</p>
                 </div>
                 <div id="mall">
+                    <img src="images/placeholder.png" data-src="images/aeorvillage.jpg" alt="aerovillage commercial center">
                     <h3>Aerovillage </h3>
                     <p>Aerovillage is a commercial center, based in the municipality of Talatamaty, which is part of Ambohidratrimo district. 
                         It is located at 5 minutes’ drive from the airport. 
@@ -103,19 +106,25 @@
                         Banks and insurance company can also be found at this place.</p>
                 </div>
                 <div id="municipality">
+                    <img src="images/placeholder.png" data-src="images/commune.jpg" alt="municipality of Talatamaty">
                     <h3>The municipality Talatamaty</h3>
                     <p>Talatamaty is a well-known area. It is one of the municipalities inside the district of Ambohidratrimo, and one of the largest. 
                         It is located at 10km north-west of the capital city Antananarivo. 
                         Talatamaty is a fast-growing area and is a very diverse place in term of business. </p>
                 </div>
                 <div id="marina">
+                    <img src="images/placeholder.png" data-src="images/marina.jpg" alt="marina casino and hotel">
                     <h3>Marina Casino and Hotel</h3>
                     <p>Marina Casino is a casino and hotel based in the municipality of Talatamaty. It is located at the Golden Peacock Hotel, in the municipality of Talatamaty. 
                         The hotel is one of the exotic hotels in Madagascar featuring a variety of amenities that include spacious guest rooms, fitness center, conference room, spa and an outdoor pool.</p>
                 </div>
                 <div id="mining">
+                    <img src="images/placeholder.png" data-src="images/miningcenter.jpg" alt="mining business center">
                     <h3>The Mining Business Center</h3>
-                    <p></p>
+                    <p>Mining Business Center is located on the main road of Ivato airport. 
+                        The project area is approximately 2000 square meters. 
+                        The multi-faceted design concept of the exterior wall comes from the diamond itself, known as the diamond curtain wall. 
+                        The complex structure and shape of the project fully reflect the technical strength of the company, allowing it to become an iconic building in Madagascar.</p>
                 </div>
             </section>
         </main>
