--- a/lesson07/lazyload.html
+++ b/lesson07/lazyload.html
@@ -8,29 +8,28 @@
         <title>Lazy Load</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
-    
     <body>
         <header>
             <h1>Images Lazy Load</h1>
         </header>
         <main>
             <picture>
-                <img src="placeholder.png" data-src="images/baobab.jpg" alt="Madagascar Baobab">
+                <img src="./images/placeholder.png" data-src="images/baobab.jpg" alt="Madagascar Baobab">
             </picture>
             <picture>
-                <img src="placeholder.png" data-src="images/Tsingy.jpg" alt="Tsingy Madagascar">
+                <img src="./images/placeholder.png" data-src="images/Tsingy.jpg" alt="Tsingy Madagascar">
             </picture>
             <picture>
-                <img src="placeholder.png" data-src="images/cameleon.jpg" alt="Chameleon of Madagascar">
+                <img src="./images/placeholder.png" data-src="images/cameleon.jpg" alt="Chameleon of Madagascar">
             </picture>
             <picture>
-                <img src="placeholder.png" data-src="images/butterfly.jpg" alt="butterfly of Madagascar">
+                <img src="./images/placeholder.png" data-src="images/butterfly.jpg" alt="butterfly of Madagascar">
             </picture>
             <picture>
-                <img src="placeholder.png" data-src="images/orchid.jpg" alt="orchid of Madagascar">
+                <img src="./images/placeholder.png" data-src="images/orchid.jpg" alt="orchid of Madagascar">
             </picture>
             <picture>
-                <img src="placeholder.png" data-src="images/maki.jpg" alt="maki of Madagascar">
+                <img src="./images/placeholder.png" data-src="images/maki.jpg" alt="maki of Madagascar">
             </picture>
         </main>
         <script defer src="js/script.js"></script>
