optimize discover page, add session storage visit counts

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -45,10 +45,7 @@
                 </section> 
                 <div class="banner"></div>
             </div>
-          
-            <div class="visits">
-                <span id="numbervisit"></span><strong>Number of visits:</strong>
-            </div>
+            <div class="date"></div> 
             
         </header>
         <main>
@@ -98,7 +95,7 @@
                      Its business is centered around food retailing, food products, farming, agriculture, and industrial equipment activities.</p>
                 </div>
                 <div id="mall">
-                    <img src="images/placeholder.png" data-src="images/aeorvillage.jpg" alt="aerovillage commercial center">
+                    <img src="images/placeholder.png" data-src="images/aerovillage.jpg" alt="aerovillage commercial center">
                     <h3>Aerovillage </h3>
                     <p>Aerovillage is a commercial center, based in the municipality of Talatamaty, which is part of Ambohidratrimo district. 
                         It is located at 5 minutes’ drive from the airport. 
@@ -115,7 +112,7 @@
                 <div id="marina">
                     <img src="images/placeholder.png" data-src="images/marina.jpg" alt="marina casino and hotel">
                     <h3>Marina Casino and Hotel</h3>
-                    <p>Marina Casino is a casino and hotel based in the municipality of Talatamaty. It is located at the Golden Peacock Hotel, in the municipality of Talatamaty. 
+                    <p>Marina Casino is a casino and hotel, located at 5 minutes drive from the international airport. It is part of the Golden Peacock Hotel, in the municipality of Talatamaty. 
                         The hotel is one of the exotic hotels in Madagascar featuring a variety of amenities that include spacious guest rooms, fitness center, conference room, spa and an outdoor pool.</p>
                 </div>
                 <div id="mining">
@@ -127,6 +124,7 @@
                         The complex structure and shape of the project fully reflect the technical strength of the company, allowing it to become an iconic building in Madagascar.</p>
                 </div>
             </section>
+            <div class="visits"></div>
         </main>
         <footer>
             <div class="address-contact">
