minor change on html

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -104,7 +104,7 @@
                 </div>
                 <div id="municipality">
                     <img src="images/placeholder.png" data-src="images/commune.jpg" alt="municipality of Talatamaty">
-                    <h3>The municipality Talatamaty</h3>
+                    <h3>The municipality of Talatamaty</h3>
                     <p>Talatamaty is a well-known area. It is one of the municipalities inside the district of Ambohidratrimo, and one of the largest. 
                         It is located at 10km north-west of the capital city Antananarivo. 
                         Talatamaty is a fast-growing area and is a very diverse place in term of business. </p>
