error on js file fixed

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -65,7 +65,7 @@
                         It takes its name from an endemic plant that belongs only to the country.</p>
                 </div>
                 <div id="fortress">
-                    <img src="images/placeholder.png" data-src="images/fortress.jpg" al="The royal fortress of Ambohidratrimo">
+                    <img src="images/placeholder.png" data-src="images/fortress.jpg" alt="The royal fortress of Ambohidratrimo">
                     <h3>The Fortress of Ambohidratrimo</h3>
                     <p>The Fortress of Ambohidratrimo is one of the twelve sacred hills of Antananarivo.
                         It is a sacred place, where the remains of the past are well preserved in a royal palace called Rova d'Ambohidratrimo, 
@@ -124,7 +124,9 @@
                         The complex structure and shape of the project fully reflect the technical strength of the company, allowing it to become an iconic building in Madagascar.</p>
                 </div>
             </section>
-            <div class="visits"></div>
+            <div class="numbvisits">
+                Number of visits: <span id="visits"></span>
+            </div>
         </main>
         <footer>
             <div class="address-contact">
@@ -140,7 +142,7 @@
                     <p>greenfingreschamber@chamber.org</p>
                     <p>tel: +(261) 34 27 389 27</p>
                     <div class="location">
-                    <a href=" https://www.google.com/maps/@-18.8407366,47.4631854,17.03z"><img src="https://img.icons8.com/color/30/000000/worldwide-location.png"/>Location Map</a>
+                    <a href=" https://www.google.com/maps/@-18.8407366,47.4631854,17.03z"><img src="https://img.icons8.com/color/30/000000/worldwide-location.png" alt="map location icon">Location Map</a>
                     </div>
                 </div>
             </div>
