--- a/chamber/index.html
+++ b/chamber/index.html
@@ -102,7 +102,7 @@
                     <p>greenfingreschamber@chamber.org</p>
                     <p>tel: +(261) 34 27 389 27</p>
                     <div class="location">
-                    <a href=" https://www.google.com/maps/@-18.8407366,47.4631854,17.03z"><img src="https://img.icons8.com/color/30/000000/worldwide-location.png"/>Location Map</a>
+                    <a href=" https://www.google.com/maps/@-18.8407366,47.4631854,17.03z"><img src="https://img.icons8.com/color/30/000000/worldwide-location.png" alt="map location icon">Location Map</a>
                     </div>
                 </div>
             </div>
