--- a/lesson-8/tablebuild.html
+++ b/lesson-8/tablebuild.html
@@ -8,7 +8,7 @@
         <title>WDD230:lesson-8 Table Build</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/tablebuild.css">
     </head>
     <body>
