caption change to tfoot, update on css

--- a/lesson-8/tablebuild.html
+++ b/lesson-8/tablebuild.html
@@ -53,10 +53,13 @@
                     <td>$6,820</td>
                     <td>$7,500</td>
                 </tr>
+            </tbody>  
+            <tfoot>
                 <tr>
-                    <caption>Compiled 12.20.2020 by bRauls</caption>
-                </tr>    
-            </tbody>       
+                    <td colspan="3" scope="rowgroup">Compiled 12.20.2020 by bRauls</td>
+                </tr>  
+            </tfoot>  
+                 
         </table>
     </body>
 </html>
