--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <li>Lesson 05: <a href="./lesson05/bom.html">DOM Manipulation</a></li>
                             <li>Lesson 06: <a href="./chamber/index.html">Responsive Design</a></li>
                             <li>Lesson 07: <a href="./chamber/discover.html">The Discover Page</a></li>
-                            <li>Lesson 08: <a href="">Title</a></li>
+                            <li>Lesson 08: <a href="./lesson-8/tablebuild.html">Table Build</a></li>
                             <li>Lesson 09: <a href="">Title</a></li>
                             <li>Lesson 10: <a href="">Title</a></li>
                             <li>Lesson 11: <a href="">Title</a></li>
