update on the discover page. Fixed image on mediu,m page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -66,7 +66,7 @@
                 </div>
                 <div id="fortress">
                     <img src="images/placeholder.png" data-src="images/fortress.jpg" alt="The royal fortress of Ambohidratrimo">
-                    <h3>The Fortress of Ambohidratrimo</h3>
+                    <h3>The Fortress of Ambohidratrimo</h4>
                     <p>The Fortress of Ambohidratrimo is one of the twelve sacred hills of Antananarivo.
                         It is a sacred place, where the remains of the past are well preserved in a royal palace called Rova d'Ambohidratrimo, 
                         and where the royal tombs, topped with the traditional 'Tranomanara' in wood, tell the amazing stories of the buried royalty. </p>
@@ -115,13 +115,25 @@
                     <p>Marina Casino is a casino and hotel, located at 5 minutes drive from the international airport. It is part of the Golden Peacock Hotel, in the municipality of Talatamaty. 
                         The hotel is one of the exotic hotels in Madagascar featuring a variety of amenities that include spacious guest rooms, fitness center, conference room, spa and an outdoor pool.</p>
                 </div>
+                <div id="mining1">
+                    <img src="images/placeholder.png" data-src="images/miningcenter.jpg" alt="mining business center">
+                    <div class="content1">
+                        <h3>The Mining Business Center</h3>
+                        <p>Mining Business Center is located on the main road of Ivato airport. 
+                            The project area is approximately 2000 square meters. 
+                            The multi-faceted design concept of the exterior wall comes from the diamond itself, known as the diamond curtain wall. 
+                            The complex structure and shape of the project fully reflect the technical strength of the company, allowing it to become an iconic building in Madagascar.</p>
+                    </div>
+                </div>
                 <div id="mining">
                     <img src="images/placeholder.png" data-src="images/miningcenter.jpg" alt="mining business center">
-                    <h3>The Mining Business Center</h3>
-                    <p>Mining Business Center is located on the main road of Ivato airport. 
-                        The project area is approximately 2000 square meters. 
-                        The multi-faceted design concept of the exterior wall comes from the diamond itself, known as the diamond curtain wall. 
-                        The complex structure and shape of the project fully reflect the technical strength of the company, allowing it to become an iconic building in Madagascar.</p>
+                    <div class="content">
+                        <h3>The Mining Business Center</h3>
+                        <p>Mining Business Center is located on the main road of Ivato airport. 
+                            The project area is approximately 2000 square meters. 
+                            The multi-faceted design concept of the exterior wall comes from the diamond itself, known as the diamond curtain wall. 
+                            The complex structure and shape of the project fully reflect the technical strength of the company, allowing it to become an iconic building in Madagascar.</p>
+                    </div>
                 </div>
             </section>
             <div class="numbvisits">
