--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,7 +7,7 @@
         <title>Green'Fingers Chamber Home Page</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
@@ -55,9 +55,9 @@
                 <h3>Hero site same and call to action</h3>
                 <picture class="hero">
                     <picture class="hero-image">
-                        <source media="(min-width:650px) and (max-width: 63.99rem)" srcset="images/hero700.jpg">
-                        <source media="(min-width: 64rem)" srcset="images/hero1000.jpg">
-                        <img src="images/hero500.jpg" alt="">
+                        <source media="(min-width:650px) and (max-width: 63.99rem)" srcset="images/hero-gf600.jpg">
+                        <source media="(min-width: 64rem)" srcset="images/hero-gf769.jpg">
+                        <img src="images/hero-gf500.jpg" alt="">
                     </picture>
                 </picture>
             </div>
