--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -34,7 +34,7 @@
                             <li><a href="index.html">Home</a></li>
                             <li class="active"><a href="discover.html">Discover</a></li>
                             <li><a href="#">Directory</a></li>
-                            <li><a href="#">Join</a></li>
+                            <li><a href="join.html">Join</a></li>
                             <li><a href="#">Contact Us</a></li>
                         </ul>
                     </nav>
