--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,9 +33,9 @@
                         <ul id="primaryNav">
                             <li class="active"><a href="index.html">Home</a></li>
                             <li><a href="discover.html">Discover</a></li>
-                            <li><a href="#">Directory</a></li>
+                            <li><a href="directory.html">Directory</a></li>
                             <li><a href="join.html">Join</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </nav>
                     <div class="social">
