try to fix the page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <li>Lesson 07: <a href="./chamber/discover.html">The Discover Page</a></li>
                             <li>Lesson 08: <a href="./lesson-8/tablebuild.html">Table Build</a></li>
                             <li>Lesson 09: <a href="./lesson-9/prophets.html"> Working with Fetch API and JSON</a></li>
-                            <li><a href="./chamber/wireframes.html">Wireframes</a></li>
+                                           <a href="./chamber/wireframes.html">Wireframes</a></li>
                             <li>Lesson 10: <a href="">Title</a></li>
                             <li>Lesson 11: <a href="">Title</a></li>
                         </ul>
@@ -52,7 +52,7 @@
             </main>
             <footer>
                 <div id="signature">
-                    &copy;<span id="year"></span> .:|:. Haingotiana N. Rambikarison .:|:. Madagascar
+                    &copy;<span id="year"></span> .:|:. Haingotiana N. Rambikarison .:|:. Madagascar.
                 </div>
                 <div id="update">
                     Last Modified: <span id="lastModifiedDate"></span>
