--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
                             <li>Lesson 06: <a href="./chamber/index.html">Responsive Design</a></li>
                             <li>Lesson 07: <a href="./chamber/discover.html">The Discover Page</a></li>
                             <li>Lesson 08: <a href="./lesson-8/tablebuild.html">Table Build</a></li>
-                            <li>Lesson 09: <a href="./lesson-9/prophets.html"> Working with Fetch API and JSON</a></li>
-                            <li>           <a href="./chamber/wireframes.html">Wireframes</a></li>
+                            <li>Lesson 09: <a href="./lesson-9/prophets.html"> Working with Fetch API and JSON | </a> <a href="./chamber/wireframes.html">Wireframes </a></li>
                             <li>Lesson 10: <a href="">Title</a></li>
-                            <li>Lesson 11: <a href="">Title</a></li>
+                            <li>Lesson 11: <a href="">Title</a></li> 
                         </ul>
                     </nav>
                 </div>
