--- a/lesson-10/weather-api.html
+++ b/lesson-10/weather-api.html
@@ -12,4 +12,5 @@
         <p>The current temperature in Fairbanks, Alaska is <span id="current-temp"></span> &deg;F</p>
         <p>The current conditions icon path is "<span id="icon-src"></span>"</p><figure><img src="" alt="" id="weathericon" />  <figcaption></figcaption></figure>
     </main>
+    <script>src="js/weatherapi.js"</script>
 </body>
