--- a/lesson-10/weather-api.html
+++ b/lesson-10/weather-api.html
@@ -5,11 +5,12 @@
     <meta name="description" content="Weather API">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Working with Weather API</title>
+    <link rel="stylesheet" href="css/weatherapi.css">
 </head>
 <body>
     <main>
         <h1>OpenWeatherMap.org API Test</h1>
-        <p>The current temperature in Fairbanks, Alaska is <span id="current-temp"></span> &deg;F</p>
+        <p>The current temperature in Fairbanks, Alaska is <span id="current-temp"></span>&deg;F</p>
         <p>The current conditions icon path is "<span id="icon-src"></span>"</p><figure><img src="" alt="" id="weathericon" />  <figcaption></figcaption></figure>
     </main>
     <script src="js/weatherapi.js"></script>
