directory page partially done. join page need to be fixed CSS ...push for update

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -33,9 +33,9 @@
                         <ul id="primaryNav">
                             <li><a href="index.html">Home</a></li>
                             <li class="active"><a href="discover.html">Discover</a></li>
-                            <li><a href="#">Directory</a></li>
+                            <li><a href="directory.html">Directory</a></li>
                             <li><a href="join.html">Join</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </nav>
                     <div class="social">
@@ -137,7 +137,7 @@
                 </div>
             </section>
             <div class="numbvisits">
-                Number of visits: <span id="visits"></span>
+                Number of days since last visit: <span id="visits"></span>
             </div>
         </main>
         <footer>
