--- a/chamber/wireframes.html
+++ b/chamber/wireframes.html
@@ -19,9 +19,9 @@
         
     </head>
     <body id="wf">
-        <h2>Wireframes</h2>
+        <h2><a href="index.html">Wireframes</a></h2>
         <h4>Small View</h4>
-        <div class="wireframe" id="sm"\>
+        <div class="wireframe" id="sm">
             
             <img id="small1" src="./images/smallview-directory.JPG" alt="Wireframes for the small view directory page">
             <img id="small2" src="./images/smallview-directory1.JPG" alt="Wireframes for the small view directory page">
