homepage weather section: placeholder replaced

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -69,13 +69,16 @@
             <div class="container3">
                 <h4>Weather</h4>
                 <div class="wea">
-                    <img src="./images/weather.png" alt="weather logo">
+                    <!--<img src="./images/weather.png" alt="weather logo">
                     <p><span id="temperature">32</span> °C</p>
                 </div>
-                <p>Partly Cloudy</p>
+                <p>Partly Cloudy</p>-->
+                <p>Current Temperature: <span id="current-temp"></span>&deg;C</p>
+                <span id="icon-src"></span><figure><img src="" alt="" id="weathericon" />  <figcaption></figcaption></figure>      
                 <hr>
+                
                 <p>Wind Speed: <span id="speed">15</span> km/h</p>
-                <p>Wind Chill: <span id="windchill"></span> °C</p>
+                <p>Wind Chill: <span id="windchill"></span></p>
             </div>
             <div class="container4">                
                 Join
